events scrollbar fix

--- a/src/Events/events.css
+++ b/src/Events/events.css
@@ -157,35 +157,38 @@
 
 .EventScroller{
     display: flex;
-    overflow: scroll;
+    overflow-x: scroll;
     padding-bottom: 20px;
     gap: 20px;
-  
+    position: relative;
 }
 
 .EventScroller::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
-	border-radius: 10px;
+	background: #D4D4D4;
+    border-radius: 9px;
+    border-top: 3px solid #f5f5f5;
+    border-bottom: 3px solid #f5f5f5;
 }
 
-.EventScroller::-webkit-scrollbar
+
+/* .EventScroller::-webkit-scrollbar-track-piece
 {
-	width: 0px;
-    height: 10px;
-	background-color: #F5F5F5;
+	background: transparent;
+    border-radius: 9px;
+    height: 2px;
+} */
+
+.EventScroller::-webkit-scrollbar {
+    background-color: white;
+    overflow: visible;
+    height: 7.9px;
+    background: transparent;
 }
 
-.EventScroller::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	background-image: -webkit-gradient(linear,
-									   left bottom,
-									   left top,
-									   color-stop(0.44, rgb(122,153,217)),
-									   color-stop(0.72, rgb(73,125,189)),
-									   color-stop(0.86, rgb(28,58,148)));
+.EventScroller::-webkit-scrollbar-thumb {
+    background-color: #005E93;
+    border-radius: 9px;
 }
 
 
